<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/register"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textAlignment="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/register_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/repeat_register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/repeat_password"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
        <TextView
                android:id="@+id/jump_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="14sp"
                android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
        <TextView
                android:id="@+id/register_result_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>