<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textAlignment="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
        <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="24sp"
                android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
        <TextView
                android:id="@+id/jump_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/without_account"
                android:textSize="14sp"
                android:layout_margin="16dp"/>
    </LinearLayout>

</LinearLayout>