<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:background="@drawable/home_background"
            android:scaleType="fitXY"
            android:id="@+id/linearLayout">

        <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:id="@+id/user_detail_icon"
                android:layout_marginTop="50dp"
                app:riv_corner_radius_bottom_left="96dp"
                app:riv_corner_radius_bottom_right="96dp"
                app:riv_corner_radius_top_left="96dp"
                app:riv_corner_radius_top_right="96dp"
                android:src="@drawable/user_icon"
                app:riv_border_color="@color/white"
                app:riv_border_width="3dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="25dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/user_detail_name"
                android:text="@string/username"
                android:textSize="14sp"/>

        <EditText
                android:id="@+id/detail_layout_user_name"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:id="@+id/linearLayout3"
            android:layout_marginTop="5dp">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/user_detail_email"
                android:text="@string/email"
                android:textSize="14sp"/>

        <EditText
                android:id="@+id/detail_layout_user_email"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">
        <Button
                android:id="@+id/user_sign_out"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/sign_out"
                android:layout_gravity="center"
                android:backgroundTint="#FF5722"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/user_detail_password"
                android:text="@string/uuid"
                android:textSize="14sp"/>

        <TextView
                android:id="@+id/detail_layout_user_id"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
    </LinearLayout>

</LinearLayout>